--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+header {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 30px;
+  border-bottom: 1px solid black;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
